Fix bucket overflow

--- a/popup/css/style.css
+++ b/popup/css/style.css
@@ -117,3 +117,9 @@ i {
 #name {
 	margin:0;
 }
+#content {
+	height:302px;
+	scrollbar-width: thin;
+	overflow-x: hidden;
+	overflow-y: auto;
+}
